# Robot_Vision_wlby

./: .gitattributes  README.md
FamBotTaskmanager2023/: FamBotTaskmanager.service  FamBotTaskmanager.sh  cmd_publisher.py
FamBotTaskmanager2023/src/FamBotTaskmanager2023/: CMakeLists.txt  package.xml
FamBotTaskmanager2023/src/cv_msgs/: CMakeLists.txt  package.xml
QR_code_to_acquire_posture/: Stag_hand_service.py  camera_calibrate.py
QR_code_to_acquire_posture/stag_ros/: CMakeLists.txt  package.xml
QR_code_to_acquire_posture/stag_ros/cfg/: bundle_4.yaml  bundle_config_4.yaml  display.rviz  single_config.yaml
QR_code_to_acquire_posture/stag_ros/launch/: stagNode_bundle_4.launch.py
Vision_Obstacle_Avoid/: README.md  Vis_obstacleavoid_6.py  Vis_obstacleavoid_Image4m.py  Vis_obstacleavoid_ROS.py  Vis_obstacleavoid_SDK.py
Vision_for_Robot_arm/: README.md  cv_switch.py  robot_arm_vision.py  shoe_pair_cos.py  shoe_pair_sift.py
aloha_data_collection/: data_record.py  realsense_camera.py  run.py
aloha_data_collection/configs/: right_arm_data_record.yaml
dock_ind/: README.md
dock_ind/src/app_msgs/: CMakeLists.txt  package.xml
dock_ind/src/zme_charging_indentifi/: CMakeLists.txt  package.xml
dock_ind/src/zme_charging_indentifi/config/: config.yaml
dock_ind/src/zme_charging_indentifi/include/charging_indentifi/: charging_indentifi.h  dock_candidate.h  icp_2d.h  laser_processor.h  linear_pose_filter_2d.h
dock_ind/src/zme_charging_indentifi/launch/: auto_dock.launch.py
dock_ind/src/zme_charging_indentifi/src/: charging_indentifi.cpp  icp_2d.cpp  laser_processor.cpp  linear_pose_filter_2d.cpp
dock_ind/src/zme_description/: setup.py
dock_ind/src/zme_msg_srv/: CMakeLists.txt  package.xml
fusion_map_normal/: README.md
fusion_map_normal/doc/: plan.md
fusion_map_normal/src/custom_image_msg/: CMakeLists.txt  package.xml
fusion_map_normal/src/fusion_map/: CMakeLists.txt  package.xml
fusion_map_normal/src/zme_msg_srv/: package.xml
graspCV/: README.md  package.xml  setup.cfg  setup.py
graspCV/graspCV/: grasp_service.py
graspCV/graspCV/configs/: config.py
graspCV/graspCV/core/: __init__.py  download_models.py  logger.py  task_interface.py  task_manager.py  utils.py
graspCV/graspCV/tasks/: __init__.py
graspCV/launch/: grasp_service.launch.py
robot_cv_msg/: CMakeLists.txt  README.md  package.xml
robot_cv_msg/msg/: BBoxesAndMasks.msg  BoundingBox.msg  EsdfMsgs.msg  GraspInfo.msg  Matrix4x4.msg  MultiObjGraspInfo.msg  Obstacleavoid.msg
robot_cv_msg/srv/: GraspSrv.srv  MotionSrv.srv  Pose.srv
src_birdview/birdview/: CMakeLists.txt
src_birdview/birdview/config/: 200_pinhole_bird_vision.yaml  500_pinhole_bird_vision.yaml  fisheye_bird_vision.yaml  test.yaml
src_birdview/birdview/config/usb_config/500/: back.yml  front.yml  left.yml  right.yml
src_birdview/birdview/include/bird_vision/: bird_vision.cpp  bird_vision.h
src_birdview/birdview/include/camera_model/: fisheye_model.h  pinhole_model.h
src_birdview/birdview/include/parameter/: parameter.h
src_birdview/birdview/include/time_utils/: tictoc.h
src_birdview/birdview/include/v4l2_stream/mix_helper/: mix_buffer.cpp
src_birdview/birdview/include/v4l2_stream/v4l2_capture/: v4l2_capture.h
src_birdview/birdview/launch/: 200_pinhole_bird_vision.launch.py  500_pinhole_bird_vision.launch.py  fisheye_bird_vision.launch.py  test.launch.py
src_birdview/birdview/src/: bird_vision_node.cpp
utils/: convert.py  hdf5_analyse.py
wlby_map_loc/: .gitignore
wlby_map_loc/common_tools/PoseUtils/: Matrix.cpp  Matrix.h  Pose2DDataStruct.cpp  Pose2DDataStruct.h  Pose3DDataStruct.cpp  Pose3DDataStruct.h  angle_math_utils.cpp  angle_math_utils.h  rot_fuc_deg.cpp  rot_fuc_deg.h  rot_fuc_deg2d.cpp  rot_fuc_deg2d.h
wlby_map_loc/common_tools/check/: check.h
wlby_map_loc/common_tools/common/: common_type_define.cpp  common_type_define.h  fixed_ratio_sample.cpp  fixed_ratio_sample.h  scan_utils.cpp  scan_utils.h  sensor_data_utils.h  sleep.h  time_utils.cpp  time_utils.h
wlby_map_loc/common_tools/logger/: my_logger.h
wlby_map_loc/common_tools/message_report/: error_detect_manager.cpp  error_detect_manager.h  message_report.cpp  message_report.h
wlby_map_loc/common_tools/sensor_data/: sensor_data.cpp  sensor_data.h  sensor_data_buffer.cpp  sensor_data_buffer.h  sensor_data_parser.cpp  sensor_data_parser.h  synchron_sensor_data.cpp  synchron_sensor_data.h
wlby_map_loc/control_msg/: CMakeLists.txt  package.xml
wlby_map_loc/segment_msg/: CMakeLists.txt  package.xml
wlby_map_loc/semantic_map_msg/: CMakeLists.txt  package.xml
wlby_map_loc/semantic_mapping/: CMakeLists.txt  package.xml
wlby_map_loc/semantic_mapping/cmd/: map_save.sh  mapping.sh
wlby_map_loc/semantic_mapping/config/: azure_kinect_config.yaml  daibai_dcl.yaml  realsense_config.yaml  scenenn_config.yaml
wlby_map_loc/semantic_mapping/include/: dbscan.h  depseg_kernel.cuh  depth_segmentation.h  parameter.h  semantic_integrator.h  semantic_mapping_node.h  vox_pos_convert_tools.h
wlby_map_loc/semantic_mapping/launch/: semantic_mapping.py
wlby_map_loc/semantic_mapping/src/: dbscan.cpp  depseg_kernel.cu  main_node.cpp  parameter.cpp  semantic_integrator.cpp  semantic_mapping_node.cpp
wlby_map_loc/yolov8_ncnn/: CMakeLists.txt  package.xml
wlby_map_loc/yolov8_ncnn/config/: azure_kinect_config.yaml  daibai_dcl.yaml  realsense_config.yaml  scenenn_config.yaml
wlby_map_loc/yolov8_ncnn/include/: parameter.h  variables.h  yolo.h  yolov8_ncnn_node.h
wlby_map_loc/yolov8_ncnn/launch/: yolov8.py
wlby_map_loc/yolov8_ncnn/src/: main.cpp  parameter.cpp  yolo.cpp  yolov8_ncnn_node.cpp
zme_fusion_map/src/fusion_map/: CMakeLists.txt  package.xml
zme_fusion_map/src/fusion_map/config/: config.yaml
zme_fusion_map/src/fusion_map/include/esdf/: ESDFMap.h  parameters.h.bk
zme_fusion_map/src/fusion_map/include/fusion_map/: fusion_map.h
zme_fusion_map/src/fusion_map/launch/: fusion_map.launch.py
zme_fusion_map/src/fusion_map/src/: ESDFMap.cpp  fusion_map.cpp  parameters.cpp.bk  raycast.cpp  timing.cc
(+54 files in other folders)
